--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -21,5 +21,8 @@
   <a href="https://www.alxafrica.com" target="_blank">
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
+
+    <p><a href="tweets.html">Click here to view my tweets!</a></p>
+
 </body>
 </html>
