--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,7 +5,16 @@
   <title>Base Page</title>
 </head>
 <body>
- <hr>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <hr>
   <h2>Featured Tweet</h2>
 
   <!-- Embedded Tweet -->
@@ -27,5 +36,15 @@
   <hr>
 
   <p><a href="index.html">Back to Home Page</a></p>
+
+  </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+  <footer>
+    <p>Made by ERNEST PRATT - <a href="https://www.linkedin.com/in/ernestpratt/" target="_blank">linkedin</a>.</p>
+  </footer>
 </body>
 </html>
