--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,6 +5,15 @@
   <title>Base Page</title>
 </head>
 <body>
+   <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+  
+  <main>
+    <article>  
   <h1>Welcome to My Web Page</h1>
 
   <p>This is the first paragraph. It gives a brief introduction to the content of the page.</p>
@@ -23,6 +32,15 @@
   </a>
 
     <p><a href="tweets.html">Click here to view my tweets!</a></p>
+</article>
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+ 
+    <footer>
+    <p>Made by ERNEST PRATT - <a href="https://www.linkedin.com/in/ernestpratt/" target="_blank">linkedin</a>.</p>
+  </footer>
 
 </body>
 </html>
