--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Base Page</title>
+  <title>Home Page</title>
 </head>
 <body>
    <header>
@@ -31,7 +31,42 @@
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
   </a>
 
-    <p><a href="tweets.html">Click here to view my tweets!</a></p>
+ <!-- Learners Table Section -->
+      <h2>List of Learners</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+
+          <p><a href="tweets.html">Click here to view my tweets!</a></p>
+
 </article>
     <aside>
       <p>placeholder to add comment thread later</p>
